// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading align 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: right;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

<div>
  <h1
    className="c0"
  />
  <h1
    className="c1"
  />
  <h1
    className="c2"
  />
</div>
`;

exports[`Heading color 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: light-0;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.074rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #aabbcc;
}

<div>
  <h1
    className="c0"
  />
  <h2
    className="c1"
  />
</div>
`;

exports[`Heading css 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
  background-color: #000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.074rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
  background-color: #000;
}

<div>
  <h1
    className="c0"
  />
  <h2
    className="c1"
  />
</div>
`;

exports[`Heading decoration 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.074rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1.728rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: overline;
  text-decoration: overline;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1.440rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

<div>
  <h1
    className="c0"
  />
  <h2
    className="c1"
  />
  <h3
    className="c2"
  />
  <h4
    className="c3"
  />
</div>
`;

exports[`Heading italic 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: italic;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

<div>
  <h1
    className="c0"
  />
</div>
`;

exports[`Heading level 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.074rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1.728rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1.440rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1.200rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

<div>
  <h1
    className="c0"
  />
  <h2
    className="c1"
  />
  <h3
    className="c2"
  />
  <h4
    className="c3"
  />
  <h5
    className="c4"
  />
  <h6
    className="c5"
  />
</div>
`;

exports[`Heading margin 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: xs;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: initial;
  padding: 0;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: xsrem 0 0 0;
  padding: 0;
  color: #000000;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 xsrem 0 0;
  padding: 0;
  color: #000000;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 xsrem 0;
  padding: 0;
  color: #000000;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0 xsrem;
  padding: 0;
  color: #000000;
}

.c6 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 xsrem 0 xsrem;
  padding: 0;
  color: #000000;
}

.c7 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: xsrem 0 xsrem 0;
  padding: 0;
  color: #000000;
}

<div>
  <h1
    className="c0"
  />
  <h1
    className="c1"
  />
  <h1
    className="c2"
  />
  <h1
    className="c3"
  />
  <h1
    className="c4"
  />
  <h1
    className="c5"
  />
  <h1
    className="c6"
  />
  <h1
    className="c7"
  />
</div>
`;

exports[`Heading margin responsive 1`] = `
.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: initial;
  padding: 0;
  color: #000000;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: xs;
  padding: 0;
  color: #000000;
}

@media only screen and (min-width:48rem) {
  .c0 {
    margin: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    margin: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    margin: lg;
  }
}

<div>
  <h1
    className="c0"
  />
  <h1
    className="c1"
  />
</div>
`;

exports[`Heading padding 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: xs;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: initial;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: xsrem 0 0 0;
  color: #000000;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0 xsrem 0 0;
  color: #000000;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0 0 xsrem 0;
  color: #000000;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0 0 0 xsrem;
  color: #000000;
}

.c6 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0 xsrem 0 xsrem;
  color: #000000;
}

.c7 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: xsrem 0 xsrem 0;
  color: #000000;
}

<div>
  <h1
    className="c0"
  />
  <h1
    className="c1"
  />
  <h1
    className="c2"
  />
  <h1
    className="c3"
  />
  <h1
    className="c4"
  />
  <h1
    className="c5"
  />
  <h1
    className="c6"
  />
  <h1
    className="c7"
  />
</div>
`;

exports[`Heading padding responsive 1`] = `
.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: initial;
  color: #000000;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: xs;
  color: #000000;
}

@media only screen and (min-width:48rem) {
  .c0 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    padding: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    padding: lg;
  }
}

<div>
  <h1
    className="c0"
  />
  <h1
    className="c1"
  />
</div>
`;

exports[`Heading size 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: xs;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

<div>
  <h1
    className="c0"
  />
</div>
`;

exports[`Heading size responsive 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: xs;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: initial;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: lg;
  }
}

<div>
  <h1
    className="c0"
  />
  <h1
    className="c1"
  />
</div>
`;

exports[`Heading transform 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.074rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1.728rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: lowercase;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1.440rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 1.200rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: full-width;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

<div>
  <h1
    className="c0"
  />
  <h2
    className="c1"
  />
  <h3
    className="c2"
  />
  <h4
    className="c3"
  />
  <h5
    className="c4"
  />
</div>
`;

exports[`Heading weight 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 2.488rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: bold;
  font-style: normal;
  font-size: 2.074rem;
  line-height: 1.2em;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  margin: 0 0 0.402rem 0;
  padding: 0;
  color: #000000;
}

<div>
  <h1
    className="c0"
  />
  <h2
    className="c1"
  />
</div>
`;
